k8s/ingress/ingress-plantilla.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evenodds-ingress
  namespace: evenodds-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-evenodds-ssl
spec:
  tls:
    - hosts:
      - evenodds.IP.nip.io
      secretName: evenodds-ingress-ssl-cert
  rules:
    - host: evenodds.IP.nip.io
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: evenodds-lb
                port:
                  number: 80
